# fastapi-base-application

./: pyproject.toml
src/: main.py
src/alembic/versions/: 2025_08_10_1919-7c1b106bdbd5_create_user_table.py  2025_08_10_2153-0a874c9136df_create_user_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  user.py
src/core/models/mixins/: id_int_pk.py
src/core/schemas/: user.py
